Feature EPL-826: java 11 compatibility fix